Resolves: tdf#133269 infinite regress

Change-Id: Iffd7306517ceca94eb6db5360c7d5069c8958acc